--- a/pipelines/springboot/quay-secret.yaml
+++ b/pipelines/springboot/quay-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: your-namespace
 type: kubernetes.io/basic-auth
 stringData:
-  username: mramadan83
-  password: Ramadan_12
+  username: user
+  password: pass
