--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -1,40 +1,44 @@
 apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
-  name: spring-boot-app-pipeline
+  name: build-and-push-pipeline
+  # Adjust the namespace as needed
 spec:
   params:
     - name: git-url
-      description: Git repository URL
+      description: The Git repository URL to clone
     - name: git-revision
-      description: Git branch or commit 
+      description: The branch or commit to check out (default: main)
       default: "main"
     - name: repo-name
-      description: Image name in Quay.io 
+      description: The Quay.io repository name (e.g., "username/repo")
+
   workspaces:
     - name: shared-workspace
+      description: Workspace for sharing source code and build artifacts between tasks.
+
   tasks:
+    # 1. Clone the source code repository
     - name: clone-repo
       taskRef:
-        name: git-clone
         kind: ClusterTask
+        name: git-clone
       params:
         - name: url
           value: "$(params.git-url)"
         - name: revision
           value: "$(params.git-revision)"
-        - name: subdirectory
-          value: ""
-        - name: deleteExisting
-          value: "true"
       workspaces:
         - name: output
           workspace: shared-workspace
 
-    - name: build-and-test
+    # 2. Build the application using Maven after the repo is cloned
+    - name: build-app
+      runAfter:
+        - clone-repo
       taskRef:
-        name: maven
         kind: ClusterTask
+        name: maven
       params:
         - name: GOALS
           value: "clean package"
@@ -42,28 +46,38 @@ spec:
         - name: source
           workspace: shared-workspace
 
+    # 3. Build the container image once the app is successfully built
     - name: build-image
+      runAfter:
+        - build-app
       taskRef:
-        name: buildah
         kind: ClusterTask
+        name: buildah
       params:
         - name: IMAGE
           value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
         - name: STORAGE
           value: "overlay"
+        - name: TLSVERIFY
+          value: "true"
         - name: FORMAT
           value: "oci"
+        - name: DOCKERFILE
+          value: "/workspace/source/Dockerfile"
       workspaces:
         - name: source
           workspace: shared-workspace
 
+    # 4. Push the built image to Quay.io after the image is created
     - name: push-image
+      runAfter:
+        - build-image
       taskRef:
-        name: buildah
         kind: ClusterTask
+        name: buildah
       params:
         - name: IMAGE
-          value: "quay.io/mramadan83$(params.repo-name):$(tasks.clone-repo.results.commit)"
+          value: "quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
         - name: STORAGE
           value: "overlay"
         - name: TLSVERIFY
@@ -73,7 +87,7 @@ spec:
         - name: DESTINATION
           value: "docker://quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
         - name: AUTHFILE
-          value: "/workspace/source/credentials.json"
+          value: "/tekton/credentials/.dockerconfigjson"
       workspaces:
         - name: source
           workspace: shared-workspace
