--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -41,7 +41,9 @@ spec:
         name: maven
       params:
         - name: GOALS
-          value: "clean package"
+          value:
+            - clean
+            - package
       workspaces:
         - name: source
           workspace: shared-workspace
