--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -11,7 +11,10 @@ spec:
       description: The branch or commit to check out 
       default: "main"
     - name: repo-name
-      description: The Quay.io repository name 
+      description: The Quay.io repository name
+    - name: namespace
+      description: The namespace where the application is deployed
+      default: "your-namespace"
 
   workspaces:
     - name: shared-workspace
@@ -94,6 +97,31 @@ spec:
           value: "docker://quay.io/mramadan83/$(params.repo-name):$(tasks.clone-repo.results.commit)"
         - name: AUTHFILE
           value: "/tekton/credentials/.dockerconfigjson"
+      workspaces:
+        - name: source
+          workspace: shared-workspace
+          
+    - name: deploy-to-openshift
+      runAfter:
+        - push-image
+      taskSpec:
+        steps:
+          - name: update-deployment
+            image: quay.io/openshift/origin-cli:4.7
+            script: |
+              #!/usr/bin/env sh
+              set -e
+              IMAGE="quay.io/your-quay-username/$(params.repo-name):$(tasks.clone-repo.results.commit)"
+              DEPLOYMENT="$(params.repo-name)"
+              NAMESPACE="$(params.namespace)"
+
+              echo "Updating deployment $DEPLOYMENT in namespace $NAMESPACE to image $IMAGE"
+              oc set image deployment/$DEPLOYMENT \
+                *=${IMAGE} -n $NAMESPACE
+              echo "Deployment updated successfully."
+      params:
+        - name: repo-name
+        - name: namespace
       workspaces:
         - name: source
           workspace: shared-workspace
