--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -149,6 +149,7 @@ spec:
             script: |
               #!/usr/bin/env sh
               set -e
+              cd /workspace/infra-workspace
               git config user.name "Tekton Bot"
               git config user.email "tekton-bot@redhat.com"
               git add deployment.yaml
