--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -146,6 +146,7 @@ spec:
           # You need git installed in the image. Use an image with git and sh:
           - name: git-commit
             image: alpine/git:latest
+            workingDir: /workspace/infra-workspace
             script: |
               #!/usr/bin/env sh
               set -e
