--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -150,7 +150,14 @@ spec:
             script: |
               #!/usr/bin/env sh
               set -e
+              pwd
+              ls -la
+              git status
+
+              echo "Repo name is: $(params.repo-name)"
+              ls -la $(params.repo-name)
               git config user.name "mramadan83"
+              echo "after config"
               git config user.email "mramadan83@gmail.com"
               git status
               git add $(params.repo-name)/deployment.yaml
