--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -152,6 +152,7 @@ spec:
               set -e
               pwd
               ls -la
+              git config --global --add safe.directory /workspace/infra-workspace
               git status
 
               echo "Repo name is: $(params.repo-name)"
