--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -170,6 +170,13 @@ spec:
               git config --global --add safe.directory /workspace/infra-workspace
               git checkout main || git checkout -b main
               git push origin main
+            volumeMounts:
+              - name: git-credentials-volume
+                mountPath: /tekton/creds
+            volumes:
+              - name: git-credentials-volume
+                secret:
+                  secretName: git-credentials
       params:
         - name: repo-name
           value: "$(params.repo-name)"
