--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -31,7 +31,7 @@ spec:
     # 1. Clone the source code repository
     - name: clone-repo
       taskRef:
-        kind: ClusterTask
+        kind: Task
         name: git-clone
       params:
         - name: url
