--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -119,7 +119,7 @@ spec:
         - name: revision
           value: "main"
       workspaces:
-        - name: infra-output
+        - name: output
           workspace: infra-workspace
 
     - name: update-and-push-deployment
