--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -150,13 +150,24 @@ spec:
             script: |
               #!/usr/bin/env sh
               set -e
+              g# Configure Git
               git config --global --add safe.directory /workspace/infra-workspace
               git config user.name "mramadan83"
               git config user.email "mramadan83@gmail.com"
+            
+              # Extract credentials
+              GIT_USERNAME=$(cat /var/run/secrets/kubernetes.io/serviceaccount/username)
+              GIT_PASSWORD=$(cat /var/run/secrets/kubernetes.io/serviceaccount/password)
+              echo "GIT_USERNAME is: $GIT_USERNAME"
+              echo "GIT_Pass is: $GIT_PASSWORD"
+              # Ensure we're on the correct branch
+              git fetch --all
               git checkout main || git checkout -b main
+            
+              # Add, commit, and push changes
               git add $(params.repo-name)/deployment.yaml
               git commit -m "Update deployment image to $IMAGE"
-              git push origin main
+              git push https://${GIT_USERNAME}:${GIT_PASSWORD}@github.com/mramadan83/infra.git main
     
           # Step 3: Push changes
           # Ensure the secret with credentials is mounted and git remote is authenticated
