--- a/pipelines/springboot/pipline.yaml
+++ b/pipelines/springboot/pipline.yaml
@@ -150,7 +150,7 @@ spec:
             script: |
               #!/usr/bin/env sh
               set -e
-              g# Configure Git
+              # Configure Git
               git config --global --add safe.directory /workspace/infra-workspace
               git config user.name "mramadan83"
               git config user.email "mramadan83@gmail.com"
