--- a/docker/java/Dockerfile
+++ b/docker/java/Dockerfile
@@ -5,7 +5,7 @@ FROM registry.access.redhat.com/ubi8/openjdk-17:1.18
 WORKDIR /app
 
 # Copy Spring Boot JAR file
-COPY target/spring-boot-app.jar app.jar
+COPY target/*.jar app.jar
 
 # Expose port
 EXPOSE 8080
