--- a/pipelines/npm/pipeline.yaml
+++ b/pipelines/npm/pipeline.yaml
@@ -38,6 +38,9 @@ spec:
       workspaces:
         - name: output
           workspace: shared-workspace
+      volumeMounts:
+        - name: git-credentials
+          mountPath: /tekton/credentials
 
     # 2. Install dependencies and build the application using npm
     - name: build-app
