--- a/pipelines/npm/pipeline.yaml
+++ b/pipelines/npm/pipeline.yaml
@@ -83,7 +83,7 @@ spec:
         - name: FORMAT
           value: "oci"
         - name: DOCKERFILE
-          value: "/workspace/source/Dockerfile"
+          value: "/Dockerfile"
       workspaces:
         - name: source
           workspace: shared-workspace
